examples/federated-learning/tff/distributed-fl-simulation-k8s/distributed-fl-workload-pkg/deployment.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tff-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tff-worker
  template:
    metadata:
      labels:
        app: tff-worker
    spec:
      containers:
        - name: tff-worker
          image: gcr.io/tensorflow-federated/tff-runtime:latest
          args:
            - "./worker_service.py"
          ports:
            - containerPort: 8000
      serviceAccountName: tff-worker-service-account
...
