examples/federated-learning/tff/distributed-fl-simulation-k8s/distributed-fl-workload-pkg/service.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: tff-example-app
  name: tff-worker-service
  namespace: ns  # kpt-set: ${namespace}
spec:
  type: LoadBalancer
  selector:
    app: tff-worker
  ports:
    - port: 8000
      targetPort: 8000
...
