examples/federated-learning/tff/distributed-fl-simulation-k8s/distributed-fl-workload-pkg/worker.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: tff-example-app
  name: tff-worker-service
  namespace: ns  # kpt-set: ${namespace}
spec:
  selector:
    app: tff-worker
  ports:
    - port: 8000
      targetPort: 8000
      name: grpc
...
---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: tff-example-app
  name: tff-worker
  namespace: ns  # kpt-set: ${namespace}
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tff-worker
  template:
    metadata:
      labels:
        app: tff-worker
    spec:
      containers:
        - name: tff-worker
          image: tff-runtime:latest  # kpt-set: ${tff-runtime-container-image-id}
          args:
            - "./worker_service.py"
          ports:
            - containerPort: 8000
      serviceAccountName: tff-worker-service-account  # kpt-set: ${tff-pod-service-account-name}
...
