examples/federated-learning/tff/distributed-fl-simulation-k8s/distributed-fl-workload-pkg/service-mesh-worker-ingress-gateway.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tff-worker-ingress-gateway
  namespace: ns  # kpt-set: ${namespace}
spec:
  hosts:
    - "*"
  gateways:
    - istio-ingress/ingress-gateway
  http:
    - route:
        - destination:
            host: tff-worker.ns.svc.cluster.local  # kpt-set: tff-worker.${namespace}.svc.cluster.local
            port:
              number: 8000
...
