examples/federated-learning/tff/distributed-fl-simulation-k8s/distributed-fl-workload-pkg/service-mesh-workers-outside-mesh.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
# Route from the egress gateway to the first worker services that we added to the
# service registry
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: worker-1-through-egress-gateway
  namespace: ns  # kpt-set: ${namespace}
spec:
  hosts:
    - tff-worker-1.example.com
  gateways:
    - istio-egress/egress-gateway
  http:
    - match:
        - gateways:
            - istio-egress/egress-gateway
          port: 80
      route:
        - destination:
            host: tff-worker-1.example.com
            port:
              number: 8000
          weight: 100
...
---
# Route from the egress gateway to the second worker services that we added to the
# service registry
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: worker-2-through-egress-gateway
  namespace: ns  # kpt-set: ${namespace}
spec:
  hosts:
    - tff-worker-1
  gateways:
    - istio-egress/egress-gateway
  http:
    - match:
        - gateways:
            - istio-egress/egress-gateway
          port: 80
      route:
        - destination:
            host: tff-worker-2.example.com
            port:
              number: 8000
          weight: 100
...
