examples/federated-learning/tff/distributed-fl-simulation-k8s/distributed-fl-workload-pkg/service-mesh-worker.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
# Allow ingress traffic from istio-ingress namespace
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-istio-ingress
  namespace: ns # kpt-set: ${namespace}
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-ingress
...
---
# Allow traffic from the ingress gateway on the gRPC port
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-from-ingress-gateway-to-grpc-port
  namespace: ns # kpt-set: ${namespace}
spec:
  action: ALLOW
  rules:
    - from:
      - source:
          namespaces: ["istio-ingress"]
    - to:
      - operation:
          # For gRPC services, it's always POST.
          # Ref: https://istio.io/latest/docs/reference/config/security/authorization-policy/#Operation
          # methods: ["POST"]
          ports: ["8000"]
  selector:
    matchLabels:
      app: istio-ingressgateway
...
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tff-worker-ingress
  namespace: ns  # kpt-set: ${namespace}
spec:
  hosts:
    - "*"
  gateways:
    - istio-ingress/ingress-gateway
  http:
    - route:
      - destination:
          host: tff-worker-service
          port:
            number: 8000
...
